--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -64,6 +64,7 @@
         <item>org.telegram.messenger</item>
         <item>org.thunderdog.challegram</item>
         <item>us.zoom.videomeetings</item>
+    </string-array>
 
     <!-- The list of vendor package signatures that should also be considered
          platform signatures, specifically for use on devices with a vendor partition. -->
